--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@ h1{
 		margin-left: 0px;
 	}
 	.main{
-		font-size: 16px;
+		font-size: clamp(8px, 4vw, 30px);
 		transform:scale(2,3);
 		margin: 25px;
 	}
