--- a/index.html
+++ b/index.html
@@ -647,6 +647,23 @@ h3{
 	left: 0%;
 }
 
+/*scroll-bar-start*/
+/* Track */
+::-webkit-scrollbar-track {
+  background: white;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #F5D23B;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #DEAB2A;  
+/*scroll-bar-end*/
+
 </style>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
