--- a/index.html
+++ b/index.html
@@ -283,14 +283,8 @@ header{
 	margin-left: 0px;
 }
 
-#right:active{
-	height: 75px;
-    	width: 75px;
-}
-
-#left:active{
-	height: 75px;
-    	width: 75px;
+#left:active, #right:active{
+	font-size: 30px;
 }
 
 .slideshow i{
