--- a/index.html
+++ b/index.html
@@ -252,6 +252,8 @@ header{
 .slideshow{
 	max-width: 1200px;
 	position: relative;
+	left: 50%;
+    	transform: translateX(-50%);
 }
 
 .slideshow .slides{
